#2316 Further rationalisation of the old code.