@@ -1,41 +1,34 @@
 package ua.com.fielden.platform.utils;
 
-import static java.util.Arrays.asList;
-import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.expr;
-import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.fetch;
-import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.from;
-import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.orderBy;
-import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.select;
-import static ua.com.fielden.platform.utils.EntityUtils.isDateOnly;
-
-import java.lang.reflect.Field;
-import java.math.BigInteger;
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.Iterator;
-import java.util.List;
-
+import com.google.common.collect.ImmutableList;
 import ua.com.fielden.platform.dao.IEntityAggregatesOperations;
 import ua.com.fielden.platform.dao.IEntityDao;
-import ua.com.fielden.platform.dao.QueryExecutionModel;
 import ua.com.fielden.platform.entity.AbstractEntity;
 import ua.com.fielden.platform.entity.ActivatableAbstractEntity;
 import ua.com.fielden.platform.entity.annotation.DeactivatableDependencies;
 import ua.com.fielden.platform.entity.annotation.MapTo;
+import ua.com.fielden.platform.entity.exceptions.InvalidArgumentException;
 import ua.com.fielden.platform.entity.factory.ICompanionObjectFinder;
-import ua.com.fielden.platform.entity.query.EntityAggregates;
 import ua.com.fielden.platform.entity.query.fluent.EntityQueryProgressiveInterfaces.ICompoundCondition0;
 import ua.com.fielden.platform.entity.query.fluent.EntityQueryProgressiveInterfaces.IStandAloneExprOperationAndClose;
 import ua.com.fielden.platform.entity.query.fluent.EntityQueryProgressiveInterfaces.IWhere0;
-import ua.com.fielden.platform.entity.query.fluent.EntityQueryProgressiveInterfaces.IWhere1;
 import ua.com.fielden.platform.entity.query.fluent.fetch;
-import ua.com.fielden.platform.entity.query.model.AggregatedResultQueryModel;
 import ua.com.fielden.platform.entity.query.model.EntityResultQueryModel;
 import ua.com.fielden.platform.entity.query.model.OrderingModel;
 import ua.com.fielden.platform.entity.query.model.PrimitiveResultQueryModel;
 import ua.com.fielden.platform.reflection.Finder;
 import ua.com.fielden.platform.reflection.filtering.ActivatableEntityHasPropertyOfTypePredicate;
 import ua.com.fielden.platform.reflection.filtering.TypeFilter;
+
+import java.lang.reflect.Field;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.List;
+
+import static ua.com.fielden.platform.entity.AbstractEntity.ID;
+import static ua.com.fielden.platform.entity.ActivatableAbstractEntity.ACTIVE;
+import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.*;
+import static ua.com.fielden.platform.utils.EntityUtils.isDateOnly;
 
 public final class Validators {
     private Validators() {
@@ -149,85 +142,87 @@ public final class Validators {
     }
 
     /**
-     * Analyses all entity types on the subject of having an active dependency on the specified value. This implementation assumes that all involved entities have boolean property
-     * "active".
-     *
-     * @param entityTypes
-     * @param entityType
-     * @return
+     * Analyses all {@code entityTypes} on the subject of having an active dependency of {@code entity}.
+     * This implementation assumes that all involved entities have boolean property {@code active}.
      */
-    public static <T extends AbstractEntity<?>> long countActiveDependencies(final List<Class<? extends AbstractEntity<?>>> entityTypes, final T entity, final IEntityAggregatesOperations coAggregate) {
-        // there should be exactly 0 active and persisted dependencies to not yet persisted entity
+    public static <T extends AbstractEntity<?>> long countActiveDependencies(
+            final List<Class<? extends AbstractEntity<?>>> entityTypes,
+            final T entity,
+            final IEntityAggregatesOperations coAggregate)
+    {
+        // There should be exactly 0 active and persisted dependencies to not yet persisted entity
         if (!entity.isPersisted()) {
             return 0;
         }
 
-        // otherwise let's count
-        final Class<? extends AbstractEntity<?>> entityType = entity.getType();
-        // first analyse the domain tree
-        final List<Class<? extends AbstractEntity<?>>> relevantTypes = TypeFilter.filter(entityTypes, new ActivatableEntityHasPropertyOfTypePredicate(entityType));
-        // if there are no dependent entity types then there is no reason to check the actual persisted entity instances
+        // Otherwise, count dependencies.
+        final var entityType = entity.getType();
+        // First analyse the domain tree.
+        final var relevantTypes = TypeFilter.filter(entityTypes, new ActivatableEntityHasPropertyOfTypePredicate(entityType));
+        // If there are no dependent entity types, then there is no reason to check the actual persisted entity instances.
         if (relevantTypes.isEmpty()) {
             return 0;
-        } else {
-            // otherwise, need to compose a complex query that would count active dependencies
-            // one important thing here is not to count self-references...
-            final Iterator<Class<? extends AbstractEntity<?>>> iter = relevantTypes.iterator();
-            final Class<? extends AbstractEntity<?>> firstDependentEntityType = iter.next();
+        }
+        // Otherwise, need to compose a query that would count active dependencies.
+        // Self-references should be excluded.
+        else {
+            final var iter = relevantTypes.iterator();
+            final var firstDependentEntityType = iter.next();
 
-            // let's start with making counting query for the first dependent entity type -- there is at least one if this code was reached
-            // first obtain list of properties of the type that matches the entity type of interest
-            final List<Field> propsForFirstEntityType = Finder.findPropertiesOfSpecifiedType(firstDependentEntityType, entityType, MapTo.class);
-            // then actually make a counting query based on the obtained list
+            // Start with making the counting query for the first dependent entity type -- there is at least one such type, if this code was reached.
+            // First find a list of properties matching the entity type of interest.
+            final var propsForFirstEntityType = Finder.findPropertiesOfSpecifiedType(firstDependentEntityType, entityType, MapTo.class);
+            // Make a counting query based on the obtained list.
             IStandAloneExprOperationAndClose expressionModelInProgress = expr().model(mkQueryToCountReferencesInType(firstDependentEntityType, propsForFirstEntityType));
 
-            // need to do the same operation with other dependent types in case there are more than one
+            // Need to repeat the same operation with other dependent types in case there are more than one.
             while (iter.hasNext()) {
                 final Class<? extends AbstractEntity<?>> nextDependentEntityType = iter.next();
                 final List<Field> propsForNextEntityType = Finder.findPropertiesOfSpecifiedType(nextDependentEntityType, entityType, MapTo.class);
                 expressionModelInProgress = expressionModelInProgress.add().model(mkQueryToCountReferencesInType(nextDependentEntityType, propsForNextEntityType));
             }
 
-            final AggregatedResultQueryModel query = select(entityType).where().prop("id").eq().val(entity).yield().expr(expressionModelInProgress.model()).as("kount").modelAsAggregate();
-            final QueryExecutionModel<EntityAggregates, AggregatedResultQueryModel> qem = from(query).model();
+            final var propCount = "kount";
+            final var query = select(entityType).where().prop(ID).eq().val(entity).yield().expr(expressionModelInProgress.model()).as(propCount).modelAsAggregate();
+            final var qem = from(query).model();
 
-            final Number kount = (Number) coAggregate.getEntity(qem).get("kount");
-            return kount.longValue();
+            final Number count = coAggregate.getEntity(qem).get(propCount);
+            return count.longValue();
         }
     }
 
     /**
-     * Finds active deactivatable dependencies for the specified entity.
-     *
-     * @param entity
-     * @return
+     * Finds active deactivatable dependencies for {@code entity}.
      */
-    public static <T extends ActivatableAbstractEntity<?>> List<? extends ActivatableAbstractEntity<?>> findActiveDeactivatableDependencies(final T entity, final ICompanionObjectFinder coFinder) {
+    public static <T extends ActivatableAbstractEntity<?>> List<? extends ActivatableAbstractEntity<?>> findActiveDeactivatableDependencies(
+            final T entity,
+            final ICompanionObjectFinder coFinder)
+    {
         final List<? extends ActivatableAbstractEntity<?>> result = new ArrayList<>();
         final DeactivatableDependencies annotation = entity.getType().getAnnotation(DeactivatableDependencies.class);
         if (annotation == null) {
             return result;
         }
-        final Class<? extends AbstractEntity<?>> entityType = entity.getType();
-        final List<Class<? extends ActivatableAbstractEntity<?>>> relevantTypes = asList(annotation.value());
+        final var entityType = entity.getType();
+        final var relevantTypes = ImmutableList.copyOf(annotation.value());
 
-        for (final Class<? extends ActivatableAbstractEntity<?>> dependentType : relevantTypes) {
-            // only those properties that are key members are of interest
-            final List<Field> props = new ArrayList<>();
-            final List<Field> keyMembers = Finder.getKeyMembers(dependentType);
-            for(final Field keyMember : keyMembers) {
+        for (final var dependentType : relevantTypes) {
+            // Only those properties that are key members are of interest.
+            final var props = new ArrayList<Field>();
+            final var keyMembers = Finder.getKeyMembers(dependentType);
+            for(final var keyMember : keyMembers) {
                 if (entityType.isAssignableFrom(keyMember.getType())) {
                     props.add(keyMember);
                 }
             }
-            if (!props.isEmpty()) { // most likely this means an invalid dependency
-                IWhere1<? extends ActivatableAbstractEntity<?>> inProgress = select(dependentType).where().prop(ActivatableAbstractEntity.ACTIVE).eq().val(true).and().begin();
+            if (!props.isEmpty()) { // empty props likely indicate an invalid dependency
+                var partialQ = select(dependentType).where().prop(ACTIVE).eq().val(true).and().begin();
                 for (int index  = 0; index < props.size() - 1; index++) {
-                    final String propName = props.get(index).getName();
-                    inProgress = inProgress.prop(propName).eq().val(entity).or();
+                    final var propName = props.get(index).getName();
+                    partialQ = partialQ.prop(propName).eq().val(entity).or();
                 }
-                final String propName = props.get(props.size() - 1).getName();
-                final EntityResultQueryModel<? extends ActivatableAbstractEntity<?>> query = inProgress.prop(propName).eq().val(entity).end().model();
+                final var propName = props.getLast().getName();
+                final var query = partialQ.prop(propName).eq().val(entity).end().model();
 
                 final IEntityDao co = coFinder.find(dependentType, false);
                 result.addAll(co.getAllEntities(from(query).with(co.getFetchProvider().fetchModel()).model()));
@@ -237,55 +232,34 @@ public final class Validators {
     }
 
     /**
-     * Makes an EQL model that counts all instances of the specified entity <code>entityType</code> that contain references to the entity of interest that are expressed as
-     * properties <code>props</code>.
+     * Makes an EQL query to count all instances of {@code entityType} that contain references to an entity of interest,
+     * expressed as properties {@code props} of that entity type.
      *
-     * @param entityType
-     * @param props
-     * @return
+     * @param entityType  the owner of properties.
+     * @param props  properties in {@code entityType} of the same entity type (i.e., "entity of interest").
+     * @return  a primitive EQL query model to count dependencies.
      */
     private static <T extends AbstractEntity<?>> PrimitiveResultQueryModel mkQueryToCountReferencesInType(
-            final Class<? extends AbstractEntity<?>> entityType, // property owner
-            final List<Field> props // properties of the owning entity
-    ) {
-        final Iterator<Field> iter = props.iterator();
-        if (props.size() == 1) {
-            final Field firstProp = iter.next();
-            final ICompoundCondition0<? extends AbstractEntity<?>> cond =
-                    select(entityType).
-                            where().
-                            prop("id").ne().extProp("id").and(). // this is to prevent counting self-references, relies on throughout ID
-                            prop("active").eq().val(true).and().
-                            prop(firstProp.getName()).eq().extProp("id");
-
-            return cond.yield().countAll().modelAsPrimitive();
-
-        } else {
-            // need to add conditions to cover all properties of the referenced type using OR operation in case there are more than one
-            final Field firstProp = iter.next();
-            IWhere1<? extends AbstractEntity<?>> where =
-                    select(entityType).
-                            where().
-                            prop("id").ne().extProp("id").and(). // this is to prevent counting self-references, relies on throughout ID
-                            prop("active").eq().val(true).and().
-                            begin().
-                                prop(firstProp.getName()).eq().extProp("id").or();
-
-
-            ICompoundCondition0<? extends AbstractEntity<?>> cond = null;
-            do {
-                final Field prop = iter.next();
-                if (iter.hasNext()) {
-                    where = where.prop(prop.getName()).eq().extProp("id").or();
-                } else {
-                    cond = where.prop(prop.getName()).eq().extProp("id").end();
-                }
-
-            } while (iter.hasNext());
-
-            // yield count
-            return cond.yield().countAll().modelAsPrimitive();
+            final Class<? extends AbstractEntity<?>> entityType,
+            final List<Field> props)
+    {
+        if (props.isEmpty()) {
+            throw new InvalidArgumentException("At least one property is expected.");
         }
+
+        // Add conditions to cover all properties of the referenced type using OR operation in case there are more than one
+        var partialQ = select(entityType).
+                           where().
+                           prop(ID).ne().extProp(ID).and(). // this is to prevent counting self-references, relies on throughout ID
+                           prop(ACTIVE).eq().val(true).and().
+                           begin();
+        for (int index = 0; index < props.size() - 1; index++) {
+            final var propName = props.get(index).getName();
+            partialQ = partialQ.prop(propName).eq().extProp(ID).or();
+        }
+        final var propName = props.getLast().getName();
+        final var endQ = partialQ.prop(propName).eq().extProp(ID).end();
+        return endQ.yield().countAll().modelAsPrimitive();
     }
 
     /**
